[근형] feat: 요청게시판 머릿말에 [인프라] 추가

--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -40,6 +40,7 @@
       <option value="[airlock]">[airlock] 보안게이트웨이</option>
       <option value="[elkhound]">[elkhound] 에러추적</option>
       <option value="[board]">[board] 게시판</option>
+      <option value="[인프라]">[인프라] 인프라팀</option>
       <option value="[전체]">[전체] 모든 팀</option>
     </select>
   </div>
