--- a/app/templates/new_post.html
+++ b/app/templates/new_post.html
@@ -41,6 +41,7 @@
       <option value="[elkhound]">[elkhound] 에러추적</option>
       <option value="[board]">[board] 게시판</option>
       <option value="[인프라]">[인프라] 인프라팀</option>
+      <option value="[자문]">[자문] 모든 팀 의견 구함</option>
       <option value="[전체]">[전체] 모든 팀</option>
     </select>
   </div>
